save-password-exe/output.txt
  File "/home/benura/Desktop/save_passwords/save-password-exe/chrome-password.py", line 182
    cur.execute("SELECT url,url <!-- <div class="form-group">
                                                    ^
SyntaxError: invalid syntax
